--- a/config/default.yml
+++ b/config/default.yml
@@ -6,7 +6,7 @@ mqtt_state_prefix: palazzetti/state
 mqtt_command_prefix: palazzetti/command
 mqtt_reset_topic: palazzetti/reset
 mqtt_host: 127.0.0.1
-mqtt_client_name: vihio
+mqtt_client_name: cbox
 mqtt_discovery: on
 mqtt_config_retain: on
 mqtt_state_retain: on
